--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "YOUR TITLE HERE"
-author: "YOUR NAMES HERE"
+title: "New York City Taxi and For-Hire Vehicle Passengers Behavior Analysis"
+author: "Yinqi Wang, Yuyang Zhuo, Jiahao Lai"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 ---
