--- a/index.Rmd
+++ b/index.Rmd
@@ -7,3 +7,4 @@ site: bookdown::bookdown_site
 
 # Introduction
 
+In New York City, we are dealing with busy transportations pretty much everyday. People would ride on a cab or a for-hire vehicle for different purposes. Some would ride a vehicle to airport, to school, to work, etc. Riding with taxi and for-hire vehicle has become a crucial part of our daily lives, and this is the reason why our team choose analyzing passengers' behaviors as our topic. From the yellow-cab taxi trip data and the for-hire vehicle trip data we found on official sources, we hope to gather interesting insights on how people in different areas of NYC manage their rides, and even some information about the communities they live in. We are also interested in learning about the differences between yellow-cab riders and uber/lyft riders. For example, what's the relationship of their tip amounts? Did they have different travel destination focuses? Through this project, we hope to thoroughly answer our research questions and help us and others improve our understanding of the communities around us, and the transportation of the New York City.
