2/3 Done with data.rmd, made progress with conclusion.

--- a/data.Rmd
+++ b/data.Rmd
@@ -1,8 +1,131 @@
 # Data 
 
 ## Sources
-
+  
+The Taxi & Limousine Commission(TLC) of New York City is responsible for collecting the data. The data is collected by the technology providers authorized by TLC under the Taxicab & Livery Passenger Enhancement Programs (TPEP/LPEP). In terms of the options, we can download the monthly trip data for yellow taxi cabs, green taxi cabs, and for-hire vehicles. We decided to use data from all types of vehicles because it would be more helpful for us to learn about the transportation status of NYC from more aspects. We also decided to download the data of April, May, and June, which is a three-month span. This is because it would be the length of a quarter.  
+  
+Some basic information of the data are:
+1. There are 9 datasets in total, 3 for April, 3 for May, and 3 for June. For each month, we have one dataset for each vehicle type. 
+2. In total, there are over 200,000 observations for green taxi trips, over 10,000,000 observations for yellow taxi trips, and over 50,000,000 for for-hire vehicle trips. Overall, we have over 60 million records.
+3. For the yellow and green taxi cab trip data, some important variables are:
+    + tpep_pickup_datetime: The pickup time (when the meter was engaged).
+    + tpep_dropoff_datetime: The dropoff time (when the meter was disengaged).
+    + Passenger_count: Number of passengers in the trip.
+    + Trip_distance: Trip distance, in miles.
+    + PULocationID/DOLocationID: TLC Taxi Zone when pickup/TLC Taxi Zone when dropoff.
+    + RateCodeID: The rate code at the end of the trip. This helps us identify whether the vehicle went to the airport or not.
+    + Tip_amount: The amount of tip the passenger paid.
+    + Total_amount: The total amount charged to the passenger. 
+    + congestion_charge: The charge of passing through NYC congestion zone.
+4. For the for-hire vehicle trip data, some important variables are:
+    + pickup_datetime/dropoff_datetime: The date and time of the trip pickup/dropoff
+    + PULocationID/DOLocationID: TLC Taxi zone where the trip begins/ends.
+    + trip_miles: The trip distance in miles.
+    + trip_time: The time elapsed of the trip, in seconds.
+    + congestion_charge: The charge of passing through NYC congestion zone.
+    + tips: same as yellow/green taxi trips.
+    + driver_pay: The amount that the driver gets paid.
+  
+Issues/Problems with the Data:  
+1. First of all, we've found data entries with wrong dates. For example, there are data entries that are dated on 2021, other months in 2022, or even 2023(the future!), which is not what we want to use.
+2. Some data entries have negative tip/total amount. Some cases have tip amount greater than total amount.
+3. There are trip distances that are extremely large, an example would be 300,000 miles, which clearly doesn't make sense.
+  
 ## Cleaning / transformation
 
 ## Missing value analysis
+
+```{r message=FALSE, warning=FALSE}
+# Load the required packages
+library(arrow)
+library(dplyr)
+library(naniar)
+library(ggplot2)
+```
+
+
+```{r}
+#Load Data
+forhire <- read_parquet("../data/fhvhv.parquet")
+forhire$vehicle_type = "H"
+yellow <- read_parquet("../data/yellow.parquet")
+yellow$vehicle_type = "Y"
+green <- read_parquet("../data/green.parquet")
+green$vehicle_type = "G"
+```
+
+```{r}
+green = rename(green, pickup_datetime = lpep_pickup_datetime)
+green = rename(green, dropoff_datetime = lpep_dropoff_datetime)
+yellow = rename(yellow, dropoff_datetime = tpep_dropoff_datetime)
+yellow = rename(yellow, pickup_datetime = tpep_pickup_datetime)
+
+# Green Taxi doesn't have airport_fee column.
+green$airport_fee = NaN
+
+#yellow taxi doesn't have ehail_fee and trip_type column.
+yellow$ehail_fee = NaN
+yellow$trip_type = NaN
+
+# Do the final combination.
+taxi <- rbind(green,yellow)
+```
+
+To check and analyze the Missing Data, we have used multiple approaches:  
+  
+First, we used is.na() wrapped in colSums()to observe the number of missing values column-wise.
+```{r}
+colSums(is.na(taxi)) %>%
+  sort(decreasing = TRUE)
+
+colSums(is.na(forhire)) %>%
+  sort(decreasing = TRUE)
+```
+
+Next, we used a package *naniar* to produce a summary of the datasets' missing value counts and percent missing.
+```{r message=FALSE}
+# Get a summary of missing value for each dataset. 
+taxi_summary <- taxi%>% miss_var_summary()
+forhire_summary <- forhire%>% miss_var_summary()
+```
+
+```{r}
+# Print out the summaries.
+taxi_summary
+forhire_summary
+```
+For visualizations, we first made two bar plots (one for each dataset) to visualize the percent of missing values in each column.
+```{r}
+plot_taxi <- ggplot(taxi_summary, aes(x = reorder(variable, -pct_miss), y = pct_miss)) + 
+  geom_bar(stat = "identity") + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 1, hjust=1)) +
+  labs(title = "Missing values for taxi_summary", x = "Columns")
+plot_taxi
+
+plot_forhire <- ggplot(forhire_summary, aes(x = reorder(variable, -pct_miss), y = pct_miss)) + 
+  geom_bar(stat = "identity") + 
+  theme(axis.text.x = element_text(angle = 90, vjust = 1, hjust=1)) +
+  labs(title = "Missing values for firehire_summary", x = "Columns")
+  
+plot_forhire
+```
+Based on the numerical and visualzed results. We can see that there are only two columns in for-hire vehicles that contains missing values. One is *originating_base_num* (the number of the base that the vehicle is first dispatched) and *on_scene_datetime* (the time that the driver arrived at the pickup location). We have determined that both columns are irrelevant to our research topics and therefore will drop these columns in our future analysis. We also believed that the bar plot on for-hire vehicles has already shown enough information about its missing values.  
+  
+On the other hand, for the taxi data, we can see that the columns with the most number of missing values are *ehail_fee*(the fee it costs for passengers to use TLC's app to call their taxi) and *trip_type*(the feature that indicates the trip type of green taxi). We have found that this is because yellow taxi doesn't have an ehail_fee column and all of the values in green taxi's *ehail_fee* column are NA, this could indicate that calling a green taxi doesn't need a fee nowadays. In addition, the *trip_type* is a column that only appears in green taxi, thus all of the yellow taxi trips would have NA values in it. Some other columns with missing values are: *airport_fee*, *congestion_surcharge*, *passenger_count*, *RatecodeID*, *store_and_fwd_flag*, and *payment_type*.   
+  
+Secondly, we used *gg_miss_var()* in the *naiar* package and generated a graph of missingness in variables for each dataset.
+```{r, warning=FALSE}
+gg_miss_var(taxi)
+gg_miss_var(forhire)
+```
+Based on the results, we can see that the plots of number of missing values support our findings from the percent missings.  
+  
+Finally, we plot an upset plot for taxi dataset. We originally planned to plot one for the forhire vehicles too, but our devices were out-of-memory due to the size of the dataset (over 60 million rows).
+```{r}
+gg_miss_upset(taxi)
+```
+Based on this upset plot, we can get the following:  
+1. *ehail_fee* and *trip_type* has the most missing values. Which aligns with our previous findings.
+2. There are over 10 million cases where both *trip_type* and *ehail_fee* are missing.
+3. There are 400 thousand cases where *ehail_fee, trip_type, airport_fee, congestion_surcharge, passenger_count* are all missing. This is an interesting finding to us. In addition to the *trip_type* and *ehail_fee* we discussed previously, *airport_fee* is a column that the green taxi trip data doesn't have. Also, *congestion_surcharge* is a charge placed on passenger when their trips passed through the congestion zone of NYC. One possible reason to explain this missing is that the driver didn't drive through the congestion zone and therefore forgot to record the 0 charge. Lastly, the missing of *passenger_count* could also be an interesting topic to research. If the missing values are mostly from yellow taxi trips, this could be because that the driver didn't remember how many passengers there were or forgot to record it. If the missing values are mostly from green taxi trips, this could be because that the system had a glitch other than the reasons I mentioned for the yellow taxi.
 
