Done with interactive component.

--- a/interactive.Rmd
+++ b/interactive.Rmd
@@ -1,3 +1,9 @@
 # Interactive component
+  
+This scatter plot helps to look into the third research question in our project: What is the most likely time period for a long distance ride?  
+  
+Since the dataset is so large, we will only be focusing on the trip data that has LaGuardia airport as the dropoff destination.  
 
-
+For the interactive component, we made an interactive scatterplot. Simply hover over one of seven options on the “Day of week” color legend, then the trip data for a specific day of the week will show clearly.  
+  
+[Click here to see our interactive component on Vizhub!](https://vizhub.com/Jiahao-B-Lai/fd9e443ade264de6b80941c5879f5b11?edit=files)
